# pets-search-service-backend

./: .environment.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: urls.py
api/communications/: serializers.py  urls.py  views.py
api/complaints/: serializers.py  urls.py  views.py
api/pet_adoption_notices/: serializers.py  urls.py  views.py
api/pet_found_notices/: serializers.py  urls.py  views.py
api/pet_missing_notices/: serializers.py  urls.py  views.py
api/users/: serializers.py  urls.py  views.py
apps/communications/: models.py
apps/communications/migrations/: 0001_initial.py
apps/complaints/: choices.py  models.py
apps/complaints/migrations/: 0001_initial.py
apps/pet_adoption_notices/: apps.py  choices.py  models.py
apps/pet_adoption_notices/migrations/: 0001_initial.py
apps/pet_found_notices/: apps.py  choices.py  models.py
apps/pet_found_notices/migrations/: 0001_initial.py
apps/pet_missing_notices/: apps.py  choices.py  models.py
apps/pet_missing_notices/migrations/: 0001_initial.py
apps/pet_notice_matches/: apps.py  choices.py  models.py
apps/users/: models.py  validators.py
apps/users/migrations/: 0001_initial.py
pets_search_service/: asgi.py  urls.py  wsgi.py
pets_search_service/settings/: __init__.py  env_reader.py  settings.py
telegram/: Dockerfile  requirements.txt
telegram/bot/: main.py  utils.py
utils/: constants.py  models.py  serializers.py  validators.py  views.py
utils/models/: __init__.py  choices.py  mixins.py
(+12 files in other folders)
