[project]
name = 'pets-search-service-backend'
version = '0.1.0'
description = ''

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git', '__pycache__', '*.yml.enc']

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
exclude = ['.git', '__pycache__', '*/migrations/*']
extend-ignore = 'E701'
